got string resources rendering properly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <resources>
     <string name="app_name">Cat Personality Evaluator</string>
     <string name="select_a_cat_text">Click here to take a picture of the cat you wish to analyze</string>
-    <string name="output_text">Your cat is retarded</string>
+
+    <string name="location_text">Omaha Nebraska</string>
+    <string name="personality_text">angrily defiant</string>
+    <string name="history">helping with the "Underground Railroad" somehow</string>
+
+    <string name="output_text_1">This delightful cat\'s ancient relatives resided in </string>
+    <string name="output_text_2">. The disposition of the breed is generally </string>
+    <string name="output_text_3">. Their notable achievements include: </string>
+
 </resources>
