--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Cat Personality Evaluator</string>
-    <string name="select_a_cat_text">Click here to take a picture of the cat you wish to analyze</string>
+    <string name="select_a_cat_text">Take a cat picture</string>
 
     <string name="location_text">Omaha Nebraska</string>
     <string name="personality_text">angrily defiant</string>
