--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Cat Personality Evaluator</string>
+    <string name="app_name">Cat Type Identifier</string>
     <string name="select_a_cat_text">Take a cat picture</string>
 
     <string name="output_text_1">"This cat\'s ancient relatives resided "</string>
